# subindexer

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  Dockerfile.api  Makefile  README.md  arak.db.43242291.seed  arak.toml  docker-compose.local.yml  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  fly.api.toml  fly.indexer.toml  fly.toml  rindexer.yaml  rindexer.yaml.template  start.sh
.github/workflows/: publish.yaml  pull-request.yaml
abis/: SubscriptionManager.abi.json  SubscriptionModule.abi.json
src/: api.rs  config.rs  db.rs  eip7702.rs  main.rs  models.rs  redeem.rs  redeemable-subscriptions.sql
src/queries/: recipient.sql  recipient_subscriber.sql  redeemable.sql  subscriber.sql  user_subscriptions.sql
