[package]
name = "subindexer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
chrono = "0.4"
circles-pathfinder = "0.4.0"
alloy = {version = "1.0.22", features = ["std", "providers", "signers"] }
thiserror = "2.0.12"
