[package]
name = "subindexer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.48", default-features = false }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "json", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.7.0", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
chrono = "0.4"
circles-pathfinder = "0.5.1"
alloy = {version = "1.8.3", features = ["std", "providers", "signers"] }
anyhow = "1.0.100"
